Added:Password updated sucessfully with correct otp from email using TDD
