# FundooNote/app/routes/user.routes.js
@@ -10,5 +10,7 @@ module.exports = (app) => {
     // forgot password API - POST request
     app.post("/forgotpassword", UserDataController.forgotPassword);
      // reset user password
-    app.post("/resetpassword",UserDataController.resetPassword);
+    
+    app.post("/resetpassword", Helper.verifyToken, UserDataController.resetPassword);
+   
 };
