# FundooNote/swagger/swagger.json
@@ -2,8 +2,9 @@
     "swagger": "2.0",
     "info": {
         "version": "1.0",
-        "title": "Fundoo Notes App",
+        "title": "Fundoo Notes",
         "description": "Fundoo Notes Application",
+        
         "license": {
             "name": "MIT",
             "url": "https://opensource.org/licenses/MIT"
@@ -58,7 +59,6 @@
                         }
                     }
                 ],
-
                 "produces": ["application/json"],
                 "responses": {
                     "200": {
@@ -71,7 +71,7 @@
             }
         },
         "/forgotpassword": {
-            "put": {
+            "post": {
                 "tags": ["forgotPassword"],
                 "description": "Send password link",
                 "parameters": [
@@ -81,6 +81,31 @@
                         "description": "Sent password resent link",
                         "schema": {
                             "$ref": "#/definitions/forgotpassword"
+                        }
+                    }
+                ],
+
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {             "description": "ok"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/resetpassword": {
+            "post": {
+                "tags": ["resetpassword"],
+                "description": "Reset Password",
+                "parameters": [
+                    {
+                        "name": "resetpassword",
+                        "in": "body",
+                        "description": "Reset password",
+                        "schema": {
+                            "$ref": "#/definitions/resetpassword"
                         }
                     }
                 ],
@@ -112,6 +137,9 @@
                 },
                 "password": {
                     "type": "string"
+                },
+                "confirmPassword": {
+                    "type": "string"
                 }
             }
         },
@@ -133,6 +161,18 @@
                     "type": "string"
                 }
             }
+
+        },
+        "resetpassword": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
         }
     }
-} 
+}
